<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/snapshot_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/snap_shot_settings"
        android:onClick="clickContentView"
        android:focusable="true"></Button>

    <Button
        android:id="@+id/record_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/snapshot_settings"
        android:layout_marginLeft="15dp"
        android:text="@string/record_settings"
        android:onClick="clickContentView"
        android:focusable="true"></Button>
    
    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/record"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:id="@+id/snap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snap_shot"
        android:onClick="clickContentView"
        android:focusable="true"></Button>

    <Button
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/snap"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/record"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="clickContentView"
        android:focusable="true"></Button>

    <Button
        android:id="@+id/api2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/camera_api_2_1"
        android:onClick="clickContentView"
        android:focusable="true"></Button>

    <Button
        android:id="@+id/input_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/api2_1"
        android:text="@string/input_format"
        android:onClick="clickContentView"
        android:focusable="true"
        android:layout_marginTop="15dp"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>